Code Cleanup: Deprecated Constructors
- replaced the use of deprecated constructors (like new Integer(int) or new Double(double)) with valueOf